<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/instruction_text"
        style="@style/OnBoardTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        app:layout_constraintBottom_toTopOf="@+id/instruction_desc_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/instruction_desc_text"
        style="@style/OnBoardDescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        app:layout_constraintBottom_toTopOf="@+id/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction_text" />

    <Button
        android:id="@+id/continue_button"
        style="@style/DefaultButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction_desc_text" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>